--- a/nexus.ai/package.json
+++ b/nexus.ai/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "start": "concurrently \"node src/server.js\" \"cross-env PORT=4000 react-app-rewired start\"",
+    "dev": "\"node src/server.js\"",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
